started a nav bar

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <script src="https://kit.fontawesome.com/0c6d08c430.js" crossorigin="anonymous"></script>
+    </body>
 </html>
