--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
+    </body>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://kit.fontawesome.com/0c6d08c430.js" crossorigin="anonymous"></script>
-    </body>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </html>
