minor changes/adjustments

--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://kit.fontawesome.com/0c6d08c430.js" crossorigin="anonymous"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="./src/pages/CountdownUtilz.jsx"></script>
 </html>
